back-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: back
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
     app: back
  template:
    metadata:
      labels:
        app: back
    spec:
      containers:
      - image: back:latest
        imagePullPolicy: Never
        name: back
        ports:
          - containerPort: 8080
      restartPolicy: Always
