back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back
spec:
  selector:
    app: back
  type: NodePort
  ports:
    - protocol: TCP
      nodePort: 30080
      port: 8080
      targetPort: 8080
