front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  selector:
    app: front
  type: NodePort
  ports:
    - protocol: TCP
      nodePort: 31200
      port: 4200
      targetPort: 4200
