backend-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: backend
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: back
  podSelector:
    matchLabels:
      app: back
